# claude-code-my-workflow

./: .gitignore  Bibliography_base.bib  CLAUDE.md  MEMORY.md  Manifest.toml  Project.toml  README.md  pyproject.toml
.claude/agents/: domain-referee.md  verifier.md
.claude/references/: discipline-cards.md
.claude/rules/: corelogic-data-protocol.md  multi-language-conventions.md  orchestrator-protocol.md  orchestrator-research.md  post-flight-verification.md  project-lifecycle.md  r-code-conventions.md  replication-protocol.md  verification-protocol.md
.claude/skills/commit/: SKILL.md
Preambles/: README.md  header.tex
data/: README.md
data/corelogic_baseline/: PROVENANCE.md
explorations/: probe_interfamily_20260609.R  probe_interfamily_national_20260609.R  probe_names_20260609.R  probe_sameperson_20260610.R
projects/01_property_tax_regressivity/: README.md  research_spec.md
projects/02_cash_buyer_premium/: README.md  research_spec.md
projects/03_family_homes/: README.md  research_spec.md
projects/_template/: README.md
quality_reports/: research_ideation_intrafamily_housing_transfers.md
scripts/: build_fhfa_state_hpi.R  check-surface-sync.py  quality_score.py
shared_utils/R/: convert_raw_to_parquet.R  corelogic_loader.R  data_dictionary.R  filters.R  geocoding.R  theme_paper.R  wrap_baseline.R
shared_utils/julia/: corelogic_loader.jl
shared_utils/python/: corelogic_loader.py
templates/: data-provenance.md  project-research-spec.md  skill-template.md
templates/hello_world_test/: README.md
tmp/: ca_annual.R  check_types.R  state_rank.R
(+115 files in other folders)
