[project]
name = "corelogic-research"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]
